# io-calculator

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  build_bundle.py  calculator-theorems.html  calculator.html  index.html  pyproject.toml
assets/: calculator.css  calculator.js
data/: aio_calculator_bundle.json  papers.json
docs/: PREMISES.md
docs/zenodo/: Interior_Observer_Paper12_v3_9.docx  Interior_Observer_Paper17_v1_4.docx  Interior_Observer_Paper24_v2_1.docx  Interior_Observer_Paper28_v1_3.docx  Interior_Observer_Paper30_v1_3.docx
reports/calculator/: calculator_active_branch_theta_star_theorem_memo.md  calculator_active_branch_theta_star_theorem_report.md  calculator_closed_scalar_acoustic_generator_theorem_report.md  calculator_effectc_highz_tail_slaving_theorem_report.md  calculator_effectc_packet1500_support_promotion_theorem_report.md  calculator_effectc_packet_coefficient_fixing_theorem_report.md  calculator_effectc_peak_window_tail_profile_audit_report.md  calculator_effectc_selector_support_promotion_theorem_report.md  calculator_first_peak_support_theorem_memo.md  (+9 more)
tests/: test_model.py  test_perturbation_types.py  test_provenance.py  test_public_site_bundle.py  test_readout_functionals.py  test_recombination.py  test_scalar_acoustic_operator.py  test_scalar_metric_state.py  test_scalar_transfer_projector.py  test_scalar_tt_driver.py  test_selector.py  test_source_block.py  test_source_initial_conditions.py  test_stage2_dynamic_network.py  test_theorem_cmb.py  test_theorem_theta_star.py  test_thomson_history_contract.py  test_typed_r_operator.py
(+44 files in other folders)
