[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aio-calculator"
version = "0.1.0a1"
description = "Alpha theorem-bearing active-branch AIO calculator surface"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Cosmology Lab" }]
dependencies = []

[project.scripts]
aio-calculator = "aio_calculator.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
